discussion/kv_engine/147944/147944_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor]: Use folly::AsyncServerSocket for ServerSockets

Replace the old ServerSocket class with a new implementaion
which utilize folly::AsyncServerSocket

Change-Id: I520defc1deb345cb3c0fb3980e406f4781e34b32

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 17:31:16.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 18:26:11.000000000
Message: 
Patch Set 17: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36658/ : FAILURE

CMake error: C:/Jenkins/workspace/kv_engine-windows-master/tlm/cmake/Modules/CouchbaseGoogleTestAddTests.cmake:40 (message) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9696/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9696/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9696/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11690/ : FAILURE

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x87578) in operator delete(void*, unsigned long)  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11690/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8292/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/231/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31330/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10344/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19275/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11271/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11419/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
